<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bookmark"
        android:orderInCategory="99"
        android:title="@string/bookmark"
        app:showAsAction="never" />
    <item
        android:id="@+id/speed_200"
        android:orderInCategory="100"
        android:title="@string/speed_1"
        app:showAsAction="never" />
    <item
        android:id="@+id/speed_300"
        android:orderInCategory="101"
        android:title="@string/speed_2"
        app:showAsAction="never" />
    <item
        android:id="@+id/speed_375"
        android:orderInCategory="102"
        android:title="@string/speed_3"
        app:showAsAction="never" />
    <item
        android:id="@+id/speed_450"
        android:orderInCategory="103"
        android:title="@string/speed_4"
        app:showAsAction="never" />
    <item
        android:id="@+id/speed_525"
        android:orderInCategory="104"
        android:title="@string/speed_5"
        app:showAsAction="never" />
    <item
        android:id="@+id/speed_600"
        android:orderInCategory="105"
        android:title="@string/speed_6"
        app:showAsAction="never" />
    <item
        android:id="@+id/speed_700"
        android:orderInCategory="106"
        android:title="@string/speed_7"
        app:showAsAction="never" />
    <item
        android:id="@+id/speed_1000"
        android:orderInCategory="107"
        android:title="@string/speed_8"
        app:showAsAction="never" />
    <item
        android:id="@+id/speed_1500"
        android:orderInCategory="108"
        android:title="@string/speed_9"
        app:showAsAction="never" />
    <item
        android:id="@+id/speed_4700"
        android:orderInCategory="109"
        android:title="@string/speed_10"
        app:showAsAction="never" />
    <item
        android:id="@+id/speed_10000"
        android:orderInCategory="110"
        android:title="@string/speed_11"
        app:showAsAction="never" />
</menu>