<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg_text">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewSettingsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:text="@string/settings"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textViewWpm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/words_per_minute_wpm"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinnerVelocity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Switch
                android:id="@+id/switchTextColor"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/white_mode" />

            <Switch
                android:id="@+id/switchAlwaysBookmark"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/always_bookmark_nwhen_closing" />

            <TextView
                android:id="@+id/textViewTos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:autoLink="web"
                android:text="@string/terms_of_service_link_nbit_ly_speed_tos"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewPriv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:autoLink="web"
                android:text="@string/privacy_policy_link_nbit_ly_speed_priv"
                android:textAlignment="center"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:background="@android:color/holo_red_dark"
                android:padding="10dp"
                android:text="@string/rate_app"
                android:textAllCaps="false"
                android:textColor="@color/gradient_end" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>