<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg_default_ad">

    <ImageView
        android:id="@+id/imageViewFitariAd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/fitness_ad"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/fitari_advertisement" />

    <ImageView
        android:id="@+id/imageViewFitariLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_weight="1"
        android:elevation="10dp"
        android:contentDescription="@string/fitari_logo"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewFitariAd"
        app:layout_constraintTop_toBottomOf="@+id/imageViewFitariAd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/fitari_logo"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/textViewFitariTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fitness_alarm_clock"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/imageViewFitariLogo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:elevation="10dp"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/textViewFitariText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fitari_ad_sentence"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/textViewFitariTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:elevation="10dp"
        tools:ignore="UnusedAttribute" />

    <Button
        android:id="@+id/buttonDefaultAd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/download_app"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:elevation="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewFitariText"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:background="@color/ad_button_bg"
        tools:ignore="UnusedAttribute" />

    <Button
        android:id="@+id/buttonInvisibleDefaultAd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/download"
        android:background="@color/white_trans_100"
        android:textColor="@color/white_trans_100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
